<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="12dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="15dp"
        app:layout_constraintVertical_bias="1.0">


        <com.google.android.material.circularreveal.CircularRevealFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_this"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="238dp"
                android:text="Modify"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:cornerRadius="12dp"
                android:theme="@style/btn_style"
                android:insetTop="1dp"
                android:insetBottom="0dp"
                />

            <ImageView
                android:id="@+id/agence_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="120dp"
                android:text="2hrs 10mins"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_leavetime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="160dp"
                android:text="@string/leave_time"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_leavetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginTop="160dp"
                android:text="3:00PM"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="255dp"
                android:layout_marginTop="80dp"
                android:text="20/02/2022"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25sp"
                android:layout_marginTop="205dp"
                android:text="Ticket price"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="85dp"
                android:text="@string/departs_in"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="235dp"
                android:layout_marginTop="203dp"
                android:text="300 DA"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_agence_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="66dp"
                android:background="@android:color/darker_gray"
                android:layout_marginHorizontal="10dp"/>

            <View
                android:id="@+id/imageView11"
                android:layout_width="320dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="190dp"
                android:background="@android:color/darker_gray" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_marginStart="240dp"
                android:layout_marginTop="105dp"
                app:cardElevation="10dp">

                <View
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="8dp"
                    android:text="28"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView228"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/unit"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_seats1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:text="@string/seats_remaining"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_seats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="35dp"
                    android:text="16"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.card.MaterialCardView>

            <RatingBar
                android:id="@+id/ratingBar2"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="40dp"
                android:rating="4" />
        </com.google.android.material.circularreveal.CircularRevealFrameLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>